export type ArticleTag = {
  id: number;
  value: string;
};
