export type CouncilAlert = {
  id: number;
  title: string;
  content: string;
  pinned: boolean;
  createdAt: Date | string;
};
